k8s/store-front-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: store-front
  namespace: dev

spec:
  selector:
    app: store-front

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
